<resources>
    <string name="app_name">UCC-IT-APP-ValenciaBrown</string>
    <string name="university_of_the_commonwealth_caribbean">University of the Commonwealth Caribbean</string>
    <string name="information_technology_department">Information Technology Department</string>
    <string name="choose_an_option_below_to_continue">Choose an option below to continue</string>
    <string name="faculty_staff_directory">Faculty/Staff Directory</string>
    <string name="admissions">Admissions</string>
    <string name="social_media">Social Media</string>
    <string name="email_fab">Email Fab</string>
    <string name="timetable">Timetable</string>
    <string name="courses">Courses</string>
    <string name="head_of_department">Head of Department</string>
    <string name="miss_natalie_rose">Miss. Natalie Rose</string>
    <string name="contact">Contact #:</string>
    <string name="email">Email:</string>
    <string name="ithod_uc_edu_jm">ithod@uc.edu.jm</string>
    <string name="_876_545_9990">876-545-9990</string>
    <string name="ithod_ucc_edu_jm">ithod@ucc.edu.jm</string>
    <string name="program_coordinator">program coordinator</string>
    <string name="it_program_coordinator">IT Program Coordinator</string>
    <string name="miss_winsome_bennett">Miss. Winsome Bennett</string>
    <string name="itprogrammeofficer_ucc_edu_jm">itprogrammeofficer@ucc.edu.jm</string>
    <string name="_876_820_5609">876-820-5609</string>
    <string name="it_lecturer">IT Lecturer</string>
    <string name="mr_otis_osbourne">Mr. Otis Osbourne</string>
    <string name="itfaculty_ucc_edu_jm">itfaculty@ucc.edu.jm</string>
    <string name="_876_420_7810">876-420-7810</string>
    <string name="logo">logo</string>
    <string name="description_one">descriptionone</string>
    <string name="description_two">descriptiontwo</string>
    <string name="code">Code</string>
    <string name="monday">Monday</string>
    <string name="_7_00pm_9_00pm">7:00pm-9:00pm</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="itt302">ITT302</string>
    <string name="wednesday">Wednesday</string>
    <string name="_6_00pm_8_00pm">6:00pm-8:00pm</string>
    <string name="c_programming">C++ Programming</string>
    <string name="itt300">ITT300</string>
    <string name="tuesday">Tuesday</string>
    <string name="_10_00am_12_00pm">10:00am-12:00pm</string>
    <string name="discrete_mathematics">Discrete Mathematics</string>
    <string name="itt204">ITT204</string>
    <string name="monday">Monday</string>
    <string name="_8_00pm_10_00pm">8:00pm-10:00pm</string>
    <string name="technical_writing">Technical Writing</string>
    <string name="itt201">ITT201</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="course_name">Course Name</string>
    <string name="itt400">ITT400</string>
    <string name="project">Project+</string>
    <string name="_2_00pm_4_00pm">2:00pm-4:00pm</string>
    <string name="sunday">Sunday</string>
    <string name="timetable">Timetable</string>
    <string name="admissons">Admissons</string>
    <string name="to_be_unconditionally_admitted_to_complete_ucc_undergraduate_programmes_individuals_should_possess_a_minimum_of_five_5_subjects_at_the_gce_or_csec_level_including_the_mandatory_english_language_and_mathematics_at_grades_a_b_c_or_1_2_3_respectively_a_csec_pass_at_level_3_must_have_been_obtained_since_1998">To be unconditionally admitted to complete UCC undergraduate programmes, individuals should possess a minimum of five (5) subjects at the GCE or CSEC level (including the mandatory English Language and Mathematics) at grades A, B, C or 1, 2, 3 respectively. A CSEC pass at level 3 must have been obtained since 1998.</string>
    <string name="candidates_who_have_a_minimum_of_4_cxcs_can_also_apply_pending_the_outstanding_cxc_subjects_or_can_opt_to_do_ucc_replacement_courses_core_mathematics_english_for_academic_purpose_and_fundamentals_of_accounting">Candidates who have a minimum of 4 CXCs can also apply pending the outstanding CXC subjects or can opt to do UCC replacement courses Core Mathematics, English for Academic Purpose and Fundamentals of Accounting.</string>
    <string name="candidates_can_opt_to_apply_under_the_mature_entry_option_to_be_accepted_applicants_must_be_working_for_5_years_or_more_and_be_at_a_minimum_age_of_25_years_academic_qualifications_a_detailed_resume_a_job_letter_and_3_professional_references_will_be_required">Candidates can opt to apply under the Mature Entry option. To be accepted, applicants must be working for 5 years or more and be at a minimum age of 25 years. Academic qualifications, a detailed resume, a job letter and 3 professional references will be required.</string>
    <string name="descriptionthree">TODO</string>
    <string name="social_media">Social Media</string>
    <string name="instagram">Instagram:</string>
    <string name="twitter">Twitter:</string>
    <string name="youtube">Youtube:</string>
    <string name="logo_media">logo_media</string>
    <string name="apply_here">APPLY HERE</string>
    <string name="emailfab">EMAIL</string>
    <string name="tap_the_link_to_send_an_email_to_your_hod">Tap the link to send an email to your HOD!</string>
    <string name="ithod_ucc_edu_jm">ithod@ucc.edu.jm</string>
    <string name="logo_email_screen">logo_email_screen</string>
    <string name="courses">Courses</string>
    <string name="courses_logo">courses_logo</string>
    <string name="below_are_the_courses_that_will_be_offered_by_the_department">Below are the courses that will be offered by the department</string>
    <string name="course_name_technical_writing_course_code_itt101_prerequisite_internet_authoring_1_description_documenting_complex_technical_processes">Course Name: Technical Writing, Course Code: ITT101, Prerequisite: Internet Authoring 1, Description: Documenting complex technical processes</string>
    <string name="course_name_discrete_mathematics_course_code_itt204_prerequisite_none_description_the_study_of_mathematical_structures">Course Name: Discrete Mathematics, Course Code: ITT204, Prerequisite: None, Description: The study of mathematical structures</string>
    <string name="course_name_c_programming_course_code_itt300_prerequisite_programming_techniques_description_introduction_to_object_oriented_programming_using_c">Course Name: C++ Programming, Course Code: ITT300, Prerequisite: Programming Techniques, Description: Introduction to object oriented programming using C</string>
    <string name="course_name_operating_systems_course_code_itt302_prerequisite_none_description_introduction_to_operating_systems_their_design_and_implementation">Course Name: Operating Systems, Course Code: ITT302, Prerequisite: None, Description: Introduction to operating systems, their design and implementation</string>
    <string name="course_name_project_course_code_itt400_prerequisite_none_description_introduction_to_comprehensive_project_management_techniques">Course Name: Project+, Course Code: ITT400, Prerequisite: None, Description: Introduction to comprehensive project management techniques</string>
    <string name="course_name_programming_techniques_course_code_itt209_prerequisite_computer_information_systems_description_introduction_to_the_techniques_of_programming">Course Name: Programming Techniques, Course Code: ITT209, Prerequisite: Computer Information Systems, Description: Introduction to the techniques of programming</string>
    <string name="https_www_instagram_com_uccjamaica_hl_en">https://www.instagram.com/uccjamaica/?hl=en</string>
    <string name="https_twitter_com_uccjamaica_ref_src_twsrc_5egoogle_7ctwcamp_5eserp_7ctwgr_5eauthor">https://twitter.com/UCCjamaica?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor</string>
    <string name="https_www_youtube_com_channel_uczrvkbzlwgpzvhmacb6mtlq">https://www.youtube.com/channel/UCZRvkbzlwgpZVHMacb6MtLQ</string>
</resources>