<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".SocialmediaActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="366dp"
        android:layout_height="64dp"
        android:autoLink="web"
        android:text="@string/https_www_instagram_com_uccjamaica_hl_en"
        android:textColorLink="#00769B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="366dp"
        android:layout_height="64dp"
        android:autoLink="web"
        android:text="@string/https_twitter_com_uccjamaica_ref_src_twsrc_5egoogle_7ctwcamp_5eserp_7ctwgr_5eauthor"
        android:textColorLink="#00769B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/mediaheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_media"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="189dp"
        android:layout_height="187dp"
        android:contentDescription="@string/logo_media"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ucc_singlelogo" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:text="@string/instagram"
        android:textColor="#000305"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/twitter"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:text="@string/twitter"
        android:textColor="#000305"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <TextView
        android:id="@+id/youtube"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:text="@string/youtube"
        android:textColor="#000305"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="366dp"
        android:layout_height="64dp"
        android:autoLink="web"
        android:text="@string/https_www_youtube_com_channel_uczrvkbzlwgpzvhmacb6mtlq"
        android:textColorLink="#00769B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        tools:ignore="TextContrastCheck" />
</android.support.constraint.ConstraintLayout>