<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".CoursesActivity">

    <TextView
        android:id="@+id/coursedescription6"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/course_name_programming_techniques_course_code_itt209_prerequisite_computer_information_systems_description_introduction_to_the_techniques_of_programming"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/coursedescription5"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/course_name_project_course_code_itt400_prerequisite_none_description_introduction_to_comprehensive_project_management_techniques"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <TextView
        android:id="@+id/coursedescription4"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/course_name_operating_systems_course_code_itt302_prerequisite_none_description_introduction_to_operating_systems_their_design_and_implementation"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <TextView
        android:id="@+id/coursedescription2"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/course_name_discrete_mathematics_course_code_itt204_prerequisite_none_description_the_study_of_mathematical_structures"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/coursedescription3"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/course_name_c_programming_course_code_itt300_prerequisite_programming_techniques_description_introduction_to_object_oriented_programming_using_c"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <ImageView
        android:id="@+id/courses_logo"
        android:layout_width="189dp"
        android:layout_height="165dp"
        android:contentDescription="@string/courses_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/ucc_singlelogo" />

    <TextView
        android:id="@+id/courses_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/courses_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/below_are_the_courses_that_will_be_offered_by_the_department"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/coursedescription"
        android:layout_width="375dp"
        android:layout_height="57dp"
        android:text="@string/course_name_technical_writing_course_code_itt101_prerequisite_internet_authoring_1_description_documenting_complex_technical_processes"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

</android.support.constraint.ConstraintLayout>